// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard page component renders correctly if game list is loading 1`] = `
Array [
  <div
    className="ant-row"
    style={
      Object {
        "marginLeft": -12,
        "marginRight": -12,
      }
    }
  >
    <div
      className="ant-col ant-col-22 ant-col-offset-1"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        Welcome to the Old School Game Library
      </h1>
      <div
        id="animated-carousel"
      >
        <img
          alt="Random Game"
          data-index={0}
          id="previous-image"
          src="/image/super-mario-kart.png"
        />
        <img
          alt="Random Game"
          data-index={1}
          id="current-image"
          src="/image/super-mario-world.jpg"
        />
        <img
          alt="Random Game"
          data-index={2}
          id="next-image"
          src="/image/top-gear.jpg"
        />
      </div>
    </div>
  </div>,
  <div
    className="ant-row"
    style={
      Object {
        "marginLeft": -12,
        "marginRight": -12,
      }
    }
  >
    <div
      className="ant-col ant-col-8 ant-col-offset-2"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/library"
          onClick={[Function]}
        >
          Library
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h1
          className="text-center"
        >
          <div
            className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
            style={
              Object {
                "marginTop": "2vh",
              }
            }
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
            </span>
            <div
              className="ant-spin-text"
            >
              Loading, please wait...
            </div>
          </div>
        </h1>
      </div>
    </div>
    <div
      className="ant-col ant-col-8 ant-col-offset-2"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/favs"
          onClick={[Function]}
        >
          Your Favs
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h1
          className="text-center"
        >
          <div
            className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
            style={
              Object {
                "marginTop": "2vh",
              }
            }
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
            </span>
            <div
              className="ant-spin-text"
            >
              Loading, please wait...
            </div>
          </div>
        </h1>
      </div>
    </div>
  </div>,
]
`;

exports[`Dashboard page component renders correctly if has finished loading 1`] = `
Array [
  <div
    className="ant-row"
    style={
      Object {
        "marginLeft": -12,
        "marginRight": -12,
      }
    }
  >
    <div
      className="ant-col ant-col-22 ant-col-offset-1"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        Welcome to the Old School Game Library
      </h1>
      <div
        id="animated-carousel"
      >
        <img
          alt="Random Game"
          data-index={0}
          id="previous-image"
          src="/image/super-mario-kart.png"
        />
        <img
          alt="Random Game"
          data-index={1}
          id="current-image"
          src="/image/super-mario-world.jpg"
        />
        <img
          alt="Random Game"
          data-index={2}
          id="next-image"
          src="/image/top-gear.jpg"
        />
      </div>
    </div>
  </div>,
  <div
    className="ant-row"
    style={
      Object {
        "marginLeft": -12,
        "marginRight": -12,
      }
    }
  >
    <div
      className="ant-col ant-col-8 ant-col-offset-2"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/library"
          onClick={[Function]}
        >
          Library
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h3
          className="text-primary"
        >
          Total: 
          2000
        </h3>
        <h3
          className="text-primary"
        >
          SNES
          : 
          1000
        </h3>
        <h3
          className="text-primary"
        >
          PSX
          : 
          1000
        </h3>
      </div>
    </div>
    <div
      className="ant-col ant-col-8 ant-col-offset-2"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/favs"
          onClick={[Function]}
        >
          Your Favs
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h3
          className="text-primary"
        >
          Total: 
          1500
        </h3>
        <h3
          className="text-primary"
        >
          SNES
          : 
          500
        </h3>
        <h3
          className="text-primary"
        >
          PSX
          : 
          1000
        </h3>
      </div>
    </div>
  </div>,
]
`;
